# tokenisation-bias

./: .gitignore  .gitmodules  README.md  cli.py  makefile  pyproject.toml
commands/: model_eval.py  tok_train.py  tokenize_data.py  utilities.py
conf/: conf.yaml  eval_conf.yaml  train_conf.yaml  train_conf_pl.yaml
conf/callbacks/: device_stats.yaml  grad_accum.yaml  grad_norm.yaml  lr_monitor.yaml  model_checkpoint.yaml  speed_monitor.yaml
conf/launcher/: joblib.yaml
conf/loggers/: tensorboard.yaml
experiments/: _eval_conf.yaml  exp_default.yaml
experiments/model/: me100M-tied.yaml  me100M.yaml  me340M-tied.yaml  me57M-tied.yaml  me850M.yaml
notebooks/: 01_extract_data.ipynb  02_analysis.ipynb  analysis.ipynb  find_eval_sentences.ipynb  find_val_sentences.ipynb  issue_solver.ipynb  model_training.ipynb  run_rdd.ipynb  testing.ipynb  tokenizer_analysis.ipynb
scripts/: create_hf_tok.py  download_slim-pajama-validation.py  download_slim-pajama.py  get_loglik.py  model_eval.py  model_train.py  model_train_pl.py  tok_train.py  tokenize_data.py  tokenize_fineweb-edu-10bt.py  train.py  train_tokenizer_fineweb-edu-10bt.py  write_parquet_to_ds.py
src/: datamodule.py  dataset.py  loggers.py  model.py  module.py  optim.py  trainer.py  utilities.py
src/callbacks/: grad_norm.py  gradient_accumulation.py  lr_monitor.py  model_checkpoint.py  speed_monitor.py
src/rdd/: __init__.py
